# pr2_kinematics

./: .travis.yml  CMakeLists.txt  README.md  stack.xml
pr2_arm_ik/: CMakeLists.txt  mainpage.dox  manifest.xml
pr2_arm_ik/include/pr2_arm_ik/: pr2_arm_ik.h  pr2_arm_ik_constants.h  pr2_arm_ik_node.h  pr2_arm_ik_solver.h  pr2_arm_ik_utils.h
pr2_arm_ik/launch/: pr2_ik_larm_node.launch
pr2_arm_ik/src/: main.cpp  pr2_arm_ik.cpp  pr2_arm_ik_node.cpp  pr2_arm_ik_solver.cpp  pr2_arm_ik_utils.cpp
pr2_arm_kinematics/: CHANGELOG.rst  CMakeLists.txt  kinematics_plugins.xml  manifest.xml  package.xml
pr2_arm_kinematics/include/pr2_arm_ik/: pr2_arm_ik.h
pr2_arm_kinematics/include/pr2_arm_kinematics/: pr2_arm_ik.h  pr2_arm_ik_node.h  pr2_arm_ik_solver.h  pr2_arm_kinematics.h  pr2_arm_kinematics_plugin.h  pr2_arm_kinematics_utils.h
pr2_arm_kinematics/launch/: pr2_ik_larm_node.launch  pr2_ik_rarm_node.launch
pr2_arm_kinematics/src/: pr2_arm_ik.cpp  pr2_arm_ik_solver.cpp  pr2_arm_kinematics.cpp  pr2_arm_kinematics_plugin.cpp  pr2_arm_kinematics_utils.cpp
pr2_arm_kinematics_constraint_aware/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
pr2_arm_kinematics_constraint_aware/include/pr2_arm_kinematics_constraint_aware/: pr2_arm_kinematics_constraint_aware.h
pr2_arm_kinematics_constraint_aware/src/: main.cpp  pr2_arm_kinematics_constraint_aware.cpp
pr2_arm_kinematics_constraint_aware/test/: test_constraint_aware_kinematics.launch  test_constraint_aware_pr2_kinematics.cpp
pr2_kinematics/: CHANGELOG.rst  CMakeLists.txt  package.xml
