<package>
  <name>pr2_arm_kinematics</name>
  <version>1.0.0</version>
  <description>This package provides a kinematics implementation for the PR2 robot. It can be used to compute forward and inverse kinematics.</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_arm_kinematics</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Sachin Chitta</author>
  

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>kdl</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>kinematics_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>kinematics_base</build_depend>
  <build_depend>common_rosdeps</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>kdl</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>kinematics_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>kinematics_base</run_depend>
  <run_depend>common_rosdeps</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>kdl</test_depend> -->
  <!-- <test_depend>angles</test_depend> -->
  <!-- <test_depend>tf_conversions</test_depend> -->
  <!-- <test_depend>urdf</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>kdl_parser</test_depend> -->
  <!-- <test_depend>kinematics_msgs</test_depend> -->
  <!-- <test_depend>pluginlib</test_depend> -->
  <!-- <test_depend>kinematics_base</test_depend> -->
  <!-- <test_depend>common_rosdeps</test_depend> -->

<export>
    <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -lpr2_arm_kinematics_lib" cflags="-I${prefix}/include"/>
    <kinematics_base plugin="${prefix}/kinematics_plugins.xml"/>
</export>

</package>
