<package>
  <name>pr2_arm_kinematics_constraint_aware</name>
  <version>1.0.0</version>
  <description>pr2_arm_kinematics_constraint_aware</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_arm_kinematics_constraint_aware</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Sachin Chitta</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>pr2_arm_kinematics</build_depend>
  <build_depend>collision_space</build_depend>
  <build_depend>planning_models</build_depend>
  <build_depend>planning_environment</build_depend>
  <build_depend>arm_navigation_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>pr2_arm_kinematics</run_depend>
  <run_depend>collision_space</run_depend>
  <run_depend>planning_models</run_depend>
  <run_depend>planning_environment</run_depend>
  <run_depend>arm_navigation_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>pr2_arm_kinematics</test_depend> -->
  <!-- <test_depend>collision_space</test_depend> -->
  <!-- <test_depend>planning_models</test_depend> -->
  <!-- <test_depend>planning_environment</test_depend> -->
  <!-- <test_depend>arm_navigation_msgs</test_depend> -->

<export>
    <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -lpr2_arm_kinematics_constraint_aware_lib" cflags="-I${prefix}/include"/>
</export>

</package>
