<?xml version="1.0"?>
<package>
  <name>pr2_kinematics</name>
  <version>1.0.8</version>
  <description>The pr2_kinematics package</description>

  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>pr2_arm_kinematics</run_depend>
 
  <export>
   <metapackage/>
  </export>
</package>
